--- a/src/server/components/home.css
+++ b/src/server/components/home.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
 
+/* Random class */
 .abcde {
   font-family: Poppins;
 }
